--- a/web3/src/main/resources/application.properties
+++ b/web3/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=web3
-spring.datasource.url=jdbc:mariadb://localhost:3306/web3_baza
+spring.datasource.url=jdbc:mariadb://localhost:3306/w3_base
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
