--- a/web3/src/main/resources/application.properties
+++ b/web3/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MariaDBDialect
 logging.level.org.springframework.security=TRACE
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=TRACE
